--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -136,7 +136,9 @@ total set of variables per image in this data set are:
 11. Symmetry 
 12. Fractal Dimension 
 
-![A magnified image of a malignant breast fine needle aspiration image. White lines denote the boundary of the cell nuclei. [Source](https://www.semanticscholar.org/paper/Breast-Cancer-Diagnosis-and-Prognosis-Via-Linear-P-Mangasarian-Street/3721bb14b16e866115c906336e9d70db096c05b9/figure/0)](img/malignant_cancer.png  "A magnified image of a malignant breast fine needle aspiration.")
+```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A malignant breast fine needle aspiration image. [Source](https://pubsonline.informs.org/doi/abs/10.1287/opre.43.4.570)", fig.retina = 2, out.width="400"}
+knitr::include_graphics("img/malignant_cancer.png")
+```
 
 Below we use `glimpse` to preview the data frame. This function is similar to `head`, but can be easier to read when we have a lot of columns:
 
@@ -150,8 +152,8 @@ categorical statistical variable, we will convert it to factor using the
 function `as_factor`.
 
 ```{r 05-class, echo = TRUE}
-cancer <- cancer %>% 
-  mutate(Class = as_factor(Class)) 
+cancer <- cancer %>%
+  mutate(Class = as_factor(Class))
 glimpse(cancer)
 ```
 
@@ -165,8 +167,8 @@ so we use the `pull` function, which converts a single
 column of a data frame into a vector.
 
 ```{r 05-levels, echo = TRUE}
-cancer %>% 
-  select(Class) %>% 
+cancer %>%
+  select(Class) %>%
   pull() %>% # turns a data frame into a vector
   levels()
 ```
@@ -179,10 +181,12 @@ the `group_by` + `summarize` code pattern we used before to see that we have
 
 ```{r 05-tally}
 num_obs <- nrow(cancer)
-cancer %>% 
-  group_by(Class) %>% 
-  summarize(n = n(),
-            percentage = n() / num_obs * 100)
+cancer %>%
+  group_by(Class) %>%
+  summarize(
+    n = n(),
+    percentage = n() / num_obs * 100
+  )
 ```
 
 Next, let's draw a scatter plot to visualize the relationship between the
@@ -192,15 +196,15 @@ the `scale_color_manual` function. We also make the category labels ("B" and
 "M") more readable by changing them to "Benign" and "Malignant" using the
 `labels` argument.
 
-```{r 05-scatter, fig.height = 4, fig.width = 5}
+```{r 05-scatter, fig.height = 4, fig.width = 5, fig.cap= "Scatterplot of concavity versus perimeter coloured by diagnosis label"}
 # colour palette
-cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999") 
+cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999")
 
-perim_concav <- cancer %>%  
-  ggplot(aes(x = Perimeter, y = Concavity, color = Class)) + 
-    geom_point(alpha = 0.5) +
-    labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
+perim_concav <- cancer %>%
+  ggplot(aes(x = Perimeter, y = Concavity, color = Class)) +
+  geom_point(alpha = 0.5) +
+  labs(color = "Diagnosis") +
+  scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
 perim_concav
 ```
 
@@ -223,29 +227,31 @@ classification algorithm.
 ```{r 05-knn-0, echo = FALSE}
 ## Find the distance between new point and all others in data set
 euclidDist <- function(point1, point2) {
-    #Returns the Euclidean distance between point1 and point2.
-    #Each argument is an array containing the coordinates of a point."""
-    (sqrt(sum((point1 - point2)^2)))}
+  # Returns the Euclidean distance between point1 and point2.
+  # Each argument is an array containing the coordinates of a point."""
+  (sqrt(sum((point1 - point2)^2)))
+}
 distance_from_point <- function(row) {
-           euclidDist(new_point, row) }
-all_distances <- function(training, new_point){
-    #Returns an array of distances
-    #between each point in the training set
-   # and the new point (which is a row of attributes)
-    distance_from_point <- function(row) {
-           euclidDist(new_point, row)
+  euclidDist(new_point, row)
 }
-      apply(training, MARGIN = 1, distance_from_point)
+all_distances <- function(training, new_point) {
+  # Returns an array of distances
+  # between each point in the training set
+  # and the new point (which is a row of attributes)
+  distance_from_point <- function(row) {
+    euclidDist(new_point, row)
+  }
+  apply(training, MARGIN = 1, distance_from_point)
 }
-table_with_distances <- function(training, new_point){
-    #Augments the training table 
-    # with a column of distances from new_point
-    data.frame(training, Distance = all_distances(training, new_point))
+table_with_distances <- function(training, new_point) {
+  # Augments the training table
+  # with a column of distances from new_point
+  data.frame(training, Distance = all_distances(training, new_point))
 }
 new_point <- c(2, 4)
 attrs <- c("Perimeter", "Concavity")
-my_distances <- table_with_distances(cancer[,attrs], new_point)
-neighbours <- cancer[order(my_distances$Distance),]
+my_distances <- table_with_distances(cancer[, attrs], new_point)
+neighbours <- cancer[order(my_distances$Distance), ]
 ```
 To predict the label of a new observation, i.e., classify it as either benign
 or malignant, the K-nearest neighbour classifier generally finds the $K$
@@ -256,10 +262,10 @@ new observation, with perimeter of `r new_point[1]` and concavity of `r new_poin
 (labelled in red on the scatterplot), whose diagnosis "Class" is
 unknown.
 
-<center>
-```{r 05-knn-1, echo = FALSE, fig.height = 4, fig.width = 5}
-perim_concav + 
-  geom_point(aes(x=new_point[1], y=new_point[2]), color=cbPalette[6], size = 2.5) 
+
+```{r 05-knn-1, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap="Scatterplot of concavity versus perimeter with new observation labelled in red"}
+perim_concav +
+  geom_point(aes(x = new_point[1], y = new_point[2]), color = cbPalette[6], size = 2.5)
 ```
 </center>
 
@@ -269,23 +275,26 @@ located at the coordinates (`r round(neighbours[1, c(attrs[1], attrs[2])],
 then the perimeter and concavity values are similar, and so we may expect that
 they would have the same diagnosis. 
 
-<center>
-```{r 05-knn-2, echo = FALSE, fig.height = 4, fig.width = 5}
-perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]), 
-               color=cbPalette[6], 
-               size = 2.5) +
-  geom_segment(aes(x = new_point[1], 
-                   y = new_point[2], 
-                   xend = pull(neighbours[1, attrs[1]]), 
-                   yend = pull(neighbours[1, attrs[2]])), color = "black")
+
+```{r 05-knn-2, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap="Scatterplot of concavity versus perimeter where the nearest neighbour to the new observation is malignant"}
+perim_concav + geom_point(aes(x = new_point[1], y = new_point[2]),
+  color = cbPalette[6],
+  size = 2.5
+) +
+  geom_segment(aes(
+    x = new_point[1],
+    y = new_point[2],
+    xend = pull(neighbours[1, attrs[1]]),
+    yend = pull(neighbours[1, attrs[2]])
+  ), color = "black")
 ```
 </center>
 
 ```{r 05-knn-3, echo = FALSE}
 new_point <- c(0.2, 3.3)
 attrs <- c("Perimeter", "Concavity")
-my_distances <- table_with_distances(cancer[,attrs], new_point)
-neighbours <- cancer[order(my_distances$Distance),]
+my_distances <- table_with_distances(cancer[, attrs], new_point)
+neighbours <- cancer[order(my_distances$Distance), ]
 ```
 
 Suppose we have another new observation with perimeter `r new_point[1]` and
@@ -295,15 +304,18 @@ classify this red observation? The nearest neighbour to this new point is a
 Does this seem like the right prediction to make? Probably not, if you consider
 the other nearby points...
 
-<center>
-```{r 05-knn-4, echo = FALSE, fig.height = 4, fig.width = 5}
-perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]), 
-               color=cbPalette[6], 
-               size = 2.5) +  
-  geom_segment(aes(x = new_point[1], 
-                   y = new_point[2], 
-                   xend = pull(neighbours[1, attrs[1]]), 
-                   yend = pull(neighbours[1, attrs[2]])), color = "black")
+
+```{r 05-knn-4, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap="Scatterplot of concavity versus perimeter where the nearest neighbour to this new observation is benign"}
+perim_concav + geom_point(aes(x = new_point[1], y = new_point[2]),
+  color = cbPalette[6],
+  size = 2.5
+) +
+  geom_segment(aes(
+    x = new_point[1],
+    y = new_point[2],
+    xend = pull(neighbours[1, attrs[1]]),
+    yend = pull(neighbours[1, attrs[2]])
+  ), color = "black")
 ```
 </center>
 
@@ -316,28 +328,35 @@ are malignant. Therefore we take majority vote and classify our new red
 observation as malignant. 
 <!-- For our red observation at (`r new_point`), the nearest points are: (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`), (`r round(neighbours[2,  c(attrs[1], attrs[2])],1)`), and (`r round(neighbours[3, c(attrs[1], attrs[2])],1)`). -->
 
-<center>
-```{r 05-knn-5, echo =  FALSE, fig.height = 4, fig.width = 5}
-perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]), 
-               color=cbPalette[6], 
-               size = 2.5) +
-  geom_segment(aes(x = new_point[1], y = new_point[2],
-                   xend = pull(neighbours[1, attrs[1]]),
-                   yend = pull(neighbours[1, attrs[2]])), color = "black") +
-    geom_segment(aes(x = new_point[1], y = new_point[2],
-                   xend = pull(neighbours[2, attrs[1]]),
-                   yend = pull(neighbours[2, attrs[2]])), color = "black")+
-      geom_segment(aes(x = new_point[1], y = new_point[2],
-                   xend = pull(neighbours[3, attrs[1]]),
-                   yend = pull(neighbours[3, attrs[2]])), color = "black")
+
+```{r 05-knn-5, echo =  FALSE, fig.height = 4, fig.width = 5, fig.cap="Scatterplot of concavity versus perimeter with three nearest neighbours"}
+perim_concav + geom_point(aes(x = new_point[1], y = new_point[2]),
+  color = cbPalette[6],
+  size = 2.5
+) +
+  geom_segment(aes(
+    x = new_point[1], y = new_point[2],
+    xend = pull(neighbours[1, attrs[1]]),
+    yend = pull(neighbours[1, attrs[2]])
+  ), color = "black") +
+  geom_segment(aes(
+    x = new_point[1], y = new_point[2],
+    xend = pull(neighbours[2, attrs[1]]),
+    yend = pull(neighbours[2, attrs[2]])
+  ), color = "black") +
+  geom_segment(aes(
+    x = new_point[1], y = new_point[2],
+    xend = pull(neighbours[3, attrs[1]]),
+    yend = pull(neighbours[3, attrs[2]])
+  ), color = "black")
 ```
 </center>
 
 
 
 ```{r 05-knn-6, echo = FALSE}
-#neighbours %>% 
-#  select(ID, attrs, Class) %>% 
+# neighbours %>%
+#  select(ID, attrs, Class) %>%
 #  slice(1:3)
 ```
 
@@ -354,7 +373,7 @@ formula:
 
 $$\mathrm{Distance} = \sqrt{(x_a -x_b)^2 + (y_a - y_b)^2}$$
 ```{r 05-multiknn-0, echo = FALSE}
-new_point <- c(0,3.5)
+new_point <- c(0, 3.5)
 ```
 
 > This formula -- sometimes called the *Euclidean distance* -- is simply the straight line distance between two points on the x-y plane with coordinates $(x_a, y_a)$ and $(x_b, y_b)$.
@@ -364,16 +383,16 @@ concavity of `r new_point[2]`. Let's calculate the distances
 between our new point and each of the observations in the training set to find
 the $K=5$ observations in the training data that are nearest to our new point. 
 
-<center>
-```{r 05-multiknn-1, echo = FALSE, fig.height = 4, fig.width = 5}
-perim_concav <- cancer %>%    
-  ggplot(aes(x=Perimeter, y=Concavity, color = Class)) + 
-    geom_point(alpha = 0.5) +
-    scale_x_continuous(name = "Perimeter", breaks=seq(-2,4,1)) +
-    scale_y_continuous(name = "Concavity", breaks=seq(-2,4,1)) +
-    labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette) +
-    geom_point(aes(x=new_point[1], y=new_point[2]), color=cbPalette[6], size = 2.5) 
+
+```{r 05-multiknn-1, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap="Scatterplot of concavity versus perimeter with new observation labelled in red"}
+perim_concav <- cancer %>%
+  ggplot(aes(x = Perimeter, y = Concavity, color = Class)) +
+  geom_point(alpha = 0.5) +
+  scale_x_continuous(name = "Perimeter", breaks = seq(-2, 4, 1)) +
+  scale_y_continuous(name = "Concavity", breaks = seq(-2, 4, 1)) +
+  labs(color = "Diagnosis") +
+  scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette) +
+  geom_point(aes(x = new_point[1], y = new_point[2]), color = cbPalette[6], size = 2.5)
 perim_concav
 ```
 </center>
@@ -382,9 +401,10 @@ perim_concav
 ```{r 05-multiknn-2}
 new_obs_Perimeter <- 0
 new_obs_Concavity <- 3.5
-cancer %>% select(ID, Perimeter, Concavity, Class) %>% 
-  mutate(dist_from_new = sqrt((Perimeter - new_obs_Perimeter)^2  + (Concavity - new_obs_Concavity)^2)) %>% 
-  arrange(dist_from_new) %>% 
+cancer %>%
+  select(ID, Perimeter, Concavity, Class) %>%
+  mutate(dist_from_new = sqrt((Perimeter - new_obs_Perimeter)^2 + (Concavity - new_obs_Concavity)^2)) %>%
+  arrange(dist_from_new) %>%
   head(n = 5)
 ```
 
@@ -392,21 +412,24 @@ From this, we see that 3 of the 5 nearest neighbours to our new observation are
 malignant so classify our new observation as malignant. We circle those 5 in
 the plot below:
 
-<center>
-```{r 05-multiknn-3, echo = FALSE}
-perim_concav + annotate("path", 
-                        x=new_point[1] + 1.4 * cos(seq(0,2 * pi, 
-                                                       length.out = 100)),
-                        y=new_point[2] + 1.4 * sin(seq(0,2 * pi, 
-                                                       length.out = 100)))
+
+```{r 05-multiknn-3, echo = FALSE, fig.cap="Scatterplot of concavity versus perimeter with 5 nearest neighbours circled"}
+perim_concav + annotate("path",
+  x = new_point[1] + 1.4 * cos(seq(0, 2 * pi,
+    length.out = 100
+  )),
+  y = new_point[2] + 1.4 * sin(seq(0, 2 * pi,
+    length.out = 100
+  ))
+)
 ```
 </center>
 
 ```{r 05-multiknn-4, echo = FALSE}
-my_distances <- table_with_distances(cancer[,attrs], new_point)
-neighbours <- my_distances[order(my_distances$Distance),]
+my_distances <- table_with_distances(cancer[, attrs], new_point)
+neighbours <- my_distances[order(my_distances$Distance), ]
 k <- 5
-tab <- data.frame(neighbours[1:k,], cancer[order(my_distances$Distance),][1:k,c("ID","Class")])
+tab <- data.frame(neighbours[1:k, ], cancer[order(my_distances$Distance), ][1:k, c("ID", "Class")])
 ```
 
 It can be difficult sometimes to read code as math, so here we mathematically
@@ -440,20 +463,24 @@ $m$ variables.  In other words, the distance formula becomes
 $$Distance = \sqrt{(u_{1} -v_{1})^2 + (u_{2} - v_{2})^2 + \dots + (u_{m} - v_{m})^2}$$
 
 
-```{r 05-more, echo = FALSE}
+```{r 05-more, echo = FALSE, fig.cap = "3D scatterplot of symmetry, concavity and perimeter"}
 library(plotly)
-cancer %>% 
-plot_ly(x = ~ Perimeter, 
-          y = ~ Concavity, 
-          z= ~ Symmetry, 
-          color = ~Class, 
-          opacity = 0.4,
-          size = 150,
-          colors = c(cbPalette[1], cbPalette[2])) %>% 
-    add_markers()  %>%
-  layout(scene = list(xaxis = list(title = 'Perimeter'),
-                     yaxis = list(title = 'Concavity'),
-                    zaxis = list(title = 'Symmetry')))
+cancer %>%
+  plot_ly(
+    x = ~Perimeter,
+    y = ~Concavity,
+    z = ~Symmetry,
+    color = ~Class,
+    opacity = 0.4,
+    size = 150,
+    colors = c(cbPalette[1], cbPalette[2])
+  ) %>%
+  add_markers() %>%
+  layout(scene = list(
+    xaxis = list(title = "Perimeter"),
+    yaxis = list(title = "Concavity"),
+    zaxis = list(title = "Symmetry")
+  ))
 ```
 
 *Click and drag the plot above to rotate it, and scroll to zoom. Note that in
@@ -516,8 +543,8 @@ Finally we specify that this is a classification problem with the `set_mode` fun
 
 ```{r 05-tidymodels-3}
 knn_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 5) %>%
-       set_engine("kknn") %>%
-       set_mode("classification")
+  set_engine("kknn") %>%
+  set_mode("classification")
 knn_spec
 ```
 
@@ -529,7 +556,7 @@ and `.` (everything *except* `Class`) is to be used as the predictor.
 
 ```{r 05-tidymodels-4}
 knn_fit <- knn_spec %>%
-        fit(Class ~ ., data = cancer_train)
+  fit(Class ~ ., data = cancer_train)
 knn_fit
 ```
 Here you can see the final trained model summary. It confirms that the computational engine used
@@ -591,9 +618,9 @@ until now. To keep things simple, we will just use the `Area`, `Smoothness`, and
 variables:
 
 ```{r 05-scaling-1, message = FALSE}
-unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") %>% 
-             mutate(Class = as_factor(Class)) %>%
-            select(Class, Area, Smoothness)
+unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") %>%
+  mutate(Class = as_factor(Class)) %>%
+  select(Class, Area, Smoothness)
 head(unscaled_cancer)
 ```
 
@@ -619,9 +646,9 @@ to compute anything necessary to run the recipe (in this case, the column means 
 deviations):
 ```{r 05-scaling-3}
 uc_recipe <- uc_recipe %>%
-       step_scale(all_predictors()) %>%
-       step_center(all_predictors()) %>%
-       prep()
+  step_scale(all_predictors()) %>%
+  step_center(all_predictors()) %>%
+  prep()
 uc_recipe
 ```
 You can now see that the recipe includes a scaling and centering step for all predictor variables.
@@ -648,62 +675,74 @@ Now let's generate the two scatter plots, one for `unscaled_cancer` and one for
 `scaled_cancer`, and show them side-by-side. Each has the same new observation
 annotated with its $K=3$ nearest neighbours:
 
-<center>
-```{r 05-scaling-plt, echo = FALSE, fig.height = 4, fig.width = 10}
+
+```{r 05-scaling-plt, echo = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of K = 3 nearest neighbours with standardized and unstandardized data"}
 
 attrs <- c("Area", "Smoothness")
 
-#create a new obs and get its NNs
+# create a new obs and get its NNs
 new_obs <- tibble(Area = 400, Smoothness = 0.135, Class = "unknown")
-my_distances <- table_with_distances(unscaled_cancer[,attrs], new_obs[,attrs])
-neighbours <- unscaled_cancer[order(my_distances$Distance),]
+my_distances <- table_with_distances(unscaled_cancer[, attrs], new_obs[, attrs])
+neighbours <- unscaled_cancer[order(my_distances$Distance), ]
 
-#add the new obs to the df
+# add the new obs to the df
 unscaled_cancer <- bind_rows(unscaled_cancer, new_obs)
 
-#plot the scatter
+# plot the scatter
 unscaled <- ggplot(unscaled_cancer, aes(x = Area, y = Smoothness, color = Class)) +
-    geom_point(alpha = 0.6) +
-    labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Benign", "Malignant"), values = c("#56B4E9", "#E69F00", "red")) +
-    labs(color = "Diagnosis") + 
-    ggtitle("Nonstandardized Data") +
-    geom_segment(aes(x = unlist(new_obs[1]), y = unlist(new_obs[2]),
-                   xend = unlist(neighbours[1, attrs[1]]),
-                   yend = unlist(neighbours[1, attrs[2]])), color = "black") +
-    geom_segment(aes(x = unlist(new_obs[1]), y = unlist(new_obs[2]),
-                   xend = unlist(neighbours[2, attrs[1]]),
-                   yend = unlist(neighbours[2, attrs[2]])), color = "black") +
-    geom_segment(aes(x = unlist(new_obs[1]), y = unlist(new_obs[2]),
-                   xend = unlist(neighbours[3, attrs[1]]),
-                   yend = unlist(neighbours[3, attrs[2]])), color = "black")
+  geom_point(alpha = 0.6) +
+  labs(color = "Diagnosis") +
+  scale_color_manual(labels = c("Benign", "Malignant"), values = c("#56B4E9", "#E69F00", "red")) +
+  labs(color = "Diagnosis") +
+  ggtitle("Nonstandardized Data") +
+  geom_segment(aes(
+    x = unlist(new_obs[1]), y = unlist(new_obs[2]),
+    xend = unlist(neighbours[1, attrs[1]]),
+    yend = unlist(neighbours[1, attrs[2]])
+  ), color = "black") +
+  geom_segment(aes(
+    x = unlist(new_obs[1]), y = unlist(new_obs[2]),
+    xend = unlist(neighbours[2, attrs[1]]),
+    yend = unlist(neighbours[2, attrs[2]])
+  ), color = "black") +
+  geom_segment(aes(
+    x = unlist(new_obs[1]), y = unlist(new_obs[2]),
+    xend = unlist(neighbours[3, attrs[1]]),
+    yend = unlist(neighbours[3, attrs[2]])
+  ), color = "black")
 
-#create new scaled obs and get NNs
+# create new scaled obs and get NNs
 new_obs_scaled <- tibble(Area = -0.72, Smoothness = 2.8, Class = "unknown")
-my_distances_scaled <- table_with_distances(scaled_cancer[,attrs], new_obs_scaled[,attrs])
-neighbours_scaled <- scaled_cancer[order(my_distances_scaled$Distance),]
+my_distances_scaled <- table_with_distances(scaled_cancer[, attrs], new_obs_scaled[, attrs])
+neighbours_scaled <- scaled_cancer[order(my_distances_scaled$Distance), ]
 
-#add to the df
+# add to the df
 scaled_cancer <- bind_rows(scaled_cancer, new_obs_scaled)
 
-#plot the scatter
+# plot the scatter
 scaled <- ggplot(scaled_cancer, aes(x = Area, y = Smoothness, color = Class)) +
-    geom_point(alpha = 0.6) +
-    labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Benign", "Malignant"), values = c("#56B4E9", "#E69F00", "red")) +
-    labs(color = "Diagnosis") + 
-    ggtitle("Standardized Data") +
-    #coord_equal(ratio = 1) +
-    geom_segment(aes(x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
-                   xend = unlist(neighbours_scaled[1, attrs[1]]),
-                   yend = unlist(neighbours_scaled[1, attrs[2]])), color = "black") +
-    geom_segment(aes(x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
-                   xend = unlist(neighbours_scaled[2, attrs[1]]),
-                   yend = unlist(neighbours_scaled[2, attrs[2]])), color = "black")+
-    geom_segment(aes(x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
-                   xend = unlist(neighbours_scaled[3, attrs[1]]),
-                   yend = unlist(neighbours_scaled[3, attrs[2]])), color = "black")
-      
+  geom_point(alpha = 0.6) +
+  labs(color = "Diagnosis") +
+  scale_color_manual(labels = c("Benign", "Malignant"), values = c("#56B4E9", "#E69F00", "red")) +
+  labs(color = "Diagnosis") +
+  ggtitle("Standardized Data") +
+  # coord_equal(ratio = 1) +
+  geom_segment(aes(
+    x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
+    xend = unlist(neighbours_scaled[1, attrs[1]]),
+    yend = unlist(neighbours_scaled[1, attrs[2]])
+  ), color = "black") +
+  geom_segment(aes(
+    x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
+    xend = unlist(neighbours_scaled[2, attrs[1]]),
+    yend = unlist(neighbours_scaled[2, attrs[2]])
+  ), color = "black") +
+  geom_segment(aes(
+    x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
+    xend = unlist(neighbours_scaled[3, attrs[1]]),
+    yend = unlist(neighbours_scaled[3, attrs[2]])
+  ), color = "black")
+
 gridExtra::grid.arrange(unscaled, scaled, ncol = 2)
 ```
 </center>
@@ -740,17 +779,19 @@ what the data would look like if the cancer was rare. We will do this by
 picking only 3 observations randomly from the malignant group, and keeping all
 of the benign observations.
 
-```{r 05-unbalanced, fig.height = 4, fig.width = 5}
+```{r 05-unbalanced, fig.height = 4, fig.width = 5, fig.cap = "Imbalanced data"}
 set.seed(3)
-rare_cancer <- bind_rows(filter(cancer, Class == "B"),
-                         cancer %>% filter(Class == "M") %>% sample_n(3)) %>%
-                  select(Class, Perimeter, Concavity)
-		
-rare_plot <- rare_cancer %>%  
-  ggplot(aes(x = Perimeter, y = Concavity, color = Class)) + 
-    geom_point(alpha = 0.5) +
-    labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
+rare_cancer <- bind_rows(
+  filter(cancer, Class == "B"),
+  cancer %>% filter(Class == "M") %>% sample_n(3)
+) %>%
+  select(Class, Perimeter, Concavity)
+
+rare_plot <- rare_cancer %>%
+  ggplot(aes(x = Perimeter, y = Concavity, color = Class)) +
+  geom_point(alpha = 0.5) +
+  labs(color = "Diagnosis") +
+  scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
 rare_plot
 ```
 
@@ -770,58 +811,61 @@ benign, and the benign vote will always win. For example, look what happens for
 a new tumour observation that is quite close to two that were tagged as
 malignant:
 
-<center>
-```{r 05-upsample, echo=FALSE, fig.height = 4, fig.width = 5}
+
+```{r 05-upsample, echo=FALSE, fig.height = 4, fig.width = 5, fig.cap = "Imbalanced data with K = 7"}
 new_point <- c(3, 2)
 attrs <- c("Perimeter", "Concavity")
-my_distances <- table_with_distances(rare_cancer[,attrs], new_point)
+my_distances <- table_with_distances(rare_cancer[, attrs], new_point)
 my_distances <- bind_cols(my_distances, select(rare_cancer, Class))
-neighbours <- rare_cancer[order(my_distances$Distance),]
+neighbours <- rare_cancer[order(my_distances$Distance), ]
 
-for (i in 1:7) {  
-    clr = cbPalette[2]
-    if (neighbours$Class[i] == "M"){
-        clr = cbPalette[1]
-    }
-    rare_plot <- rare_plot + 
-                 geom_segment(x = new_point[1], 
-                   y = new_point[2], 
-                   xend = pull(neighbours[i, attrs[1]]), 
-                   yend = pull(neighbours[i, attrs[2]]), color = clr) 
+for (i in 1:7) {
+  clr <- cbPalette[2]
+  if (neighbours$Class[i] == "M") {
+    clr <- cbPalette[1]
+  }
+  rare_plot <- rare_plot +
+    geom_segment(
+      x = new_point[1],
+      y = new_point[2],
+      xend = pull(neighbours[i, attrs[1]]),
+      yend = pull(neighbours[i, attrs[2]]), color = clr
+    )
 }
-rare_plot + geom_point(aes(x=new_point[1], y=new_point[2]), 
-               color=cbPalette[6], 
-               size = 2.5)
+rare_plot + geom_point(aes(x = new_point[1], y = new_point[2]),
+  color = cbPalette[6],
+  size = 2.5
+)
 ```
 </center>
 
 And if we set the background colour of each area of the plot to the decision the K-nearest neighbour 
 classifier would make, we can see that the decision is always "benign," corresponding to the blue colour:
 
-<center>
-```{r 05-upsample-2, echo = FALSE, fig.height = 4, fig.width = 5}
+
+```{r 05-upsample-2, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Imbalanced data with background colour indicating the decision of the K-nn classifier"}
 
 knn_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 7) %>%
-       set_engine("kknn") %>%
-       set_mode("classification")
+  set_engine("kknn") %>%
+  set_mode("classification")
 
 knn_fit <- knn_spec %>%
-        fit(Class ~ ., data = rare_cancer)
+  fit(Class ~ ., data = rare_cancer)
 
-#create a prediction pt grid
+# create a prediction pt grid
 per_grid <- seq(min(rare_cancer$Perimeter), max(rare_cancer$Perimeter), length.out = 100)
 con_grid <- seq(min(rare_cancer$Concavity), max(rare_cancer$Concavity), length.out = 100)
-pcgrid <- as_tibble(expand.grid(Perimeter=per_grid, Concavity=con_grid))
+pcgrid <- as_tibble(expand.grid(Perimeter = per_grid, Concavity = con_grid))
 knnPredGrid <- predict(knn_fit, pcgrid)
 prediction_table <- bind_cols(knnPredGrid, pcgrid) %>% rename(Class = .pred_class)
 
-#create the basic plt
-rare_plot <- 
-  ggplot() + 
-    geom_point(data = rare_cancer, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha=0.75) +
-    geom_point(data = prediction_table, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha=0.02, size=5.)+
-    labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
+# create the basic plt
+rare_plot <-
+  ggplot() +
+  geom_point(data = rare_cancer, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha = 0.75) +
+  geom_point(data = prediction_table, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha = 0.02, size = 5.) +
+  labs(color = "Diagnosis") +
+  scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
 
 rare_plot
 ```
@@ -838,43 +882,43 @@ use the `group_by + summarize` pattern we've seen before to see that our classes
 
 ```{r 05-upsample-cancer}
 ups_recipe <- recipe(Class ~ ., data = rare_cancer) %>%
-       step_upsample(Class, over_ratio = 1, skip = FALSE) %>%
-       prep()
+  step_upsample(Class, over_ratio = 1, skip = FALSE) %>%
+  prep()
 ups_recipe
 ```
 
 ```{r 05-upsample-cancer-2}
 upsampled_cancer <- bake(ups_recipe, rare_cancer)
 
-upsampled_cancer %>% 
-	group_by(Class) %>%
-	summarize(n = n())
+upsampled_cancer %>%
+  group_by(Class) %>%
+  summarize(n = n())
 ```
 Now suppose we train our K-nearest neighbour classifier with $K=7$ on this *balanced* data. Setting the background colour 
 of each area of our scatter plot to the decision the K-nearest neighbour 
 classifier would make, we can see that the decision is more reasonable; when the points are close
 to those labelled malignant, the classifier predicts a malignant tumour, and vice versa when they are closer to the benign tumour observations:
-<center>
-```{r 05-upsample-plot, echo = FALSE, fig.height = 4, fig.width = 5}
+
+```{r 05-upsample-plot, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "K-nn after upsampling"}
 
 knn_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 7) %>%
-       set_engine("kknn") %>%
-       set_mode("classification")
+  set_engine("kknn") %>%
+  set_mode("classification")
 
 knn_fit <- knn_spec %>%
-        fit(Class ~ ., data = upsampled_cancer)
+  fit(Class ~ ., data = upsampled_cancer)
 
-#create a prediction pt grid
+# create a prediction pt grid
 knnPredGrid <- predict(knn_fit, pcgrid)
 prediction_table <- bind_cols(knnPredGrid, pcgrid) %>% rename(Class = .pred_class)
 
-#create the basic plt
-upsampled_plot <- 
-  ggplot() + 
-    geom_point(data = prediction_table, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha=0.02, size=5.)+
-    geom_point(data = rare_cancer, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha=0.75) +
-    labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Malignant","Benign"), values = cbPalette)
+# create the basic plt
+upsampled_plot <-
+  ggplot() +
+  geom_point(data = prediction_table, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha = 0.02, size = 5.) +
+  geom_point(data = rare_cancer, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha = 0.75) +
+  labs(color = "Diagnosis") +
+  scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
 
 upsampled_plot
 ```
@@ -891,17 +935,17 @@ First we will load the data, create a model, and specify a recipe for how the da
 
 # load the unscaled cancer data and make sure the target Class variable is a factor
 unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") %>%
-                      mutate(Class = as_factor(Class))
+  mutate(Class = as_factor(Class))
 
 # create the KNN model
 knn_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 7) %>%
-       set_engine("kknn") %>%
-       set_mode("classification")
+  set_engine("kknn") %>%
+  set_mode("classification")
 
 # create the centering / scaling recipe
 uc_recipe <- recipe(Class ~ Area + Smoothness, data = unscaled_cancer) %>%
-       step_scale(all_predictors()) %>%
-       step_center(all_predictors()) 
+  step_scale(all_predictors()) %>%
+  step_center(all_predictors())
 ```
 Note that each of these steps is exactly the same as earlier, except for one major difference:
 we did not use the `select` function to extract the relevant variables from the data frame,
@@ -917,9 +961,9 @@ is again because we included the formula in the recipe, so there is no need to r
 
 ```{r 05-workflow-add}
 knn_fit <- workflow() %>%
-           add_recipe(uc_recipe) %>%
-           add_model(knn_spec) %>% 
-	fit(data = unscaled_cancer)
+  add_recipe(uc_recipe) %>%
+  add_model(knn_spec) %>%
+  fit(data = unscaled_cancer)
 knn_fit
 ```
 As before, the fit object lists the function that trains the model as well as the "best" settings
@@ -938,7 +982,7 @@ if you can figure out what each line is doing!
 # create the grid of area/smoothness vals, and arrange in a data frame
 are_grid <- seq(min(unscaled_cancer$Area), max(unscaled_cancer$Area), length.out = 100)
 smo_grid <- seq(min(unscaled_cancer$Smoothness), max(unscaled_cancer$Smoothness), length.out = 100)
-asgrid <- as_tibble(expand.grid(Area=are_grid, Smoothness=smo_grid))
+asgrid <- as_tibble(expand.grid(Area = are_grid, Smoothness = smo_grid))
 
 # use the fit workflow to make predictions at the grid points
 knnPredGrid <- predict(knn_fit, asgrid)
@@ -948,19 +992,15 @@ prediction_table <- bind_cols(knnPredGrid, asgrid) %>% rename(Class = .pred_clas
 
 # plot:
 # 1. the coloured scatter of the original data
-# 2. the faded coloured scatter for the grid points 
+# 2. the faded coloured scatter for the grid points
 wkflw_plot <-
   ggplot() +
-    geom_point(data = unscaled_cancer, mapping = aes(x = Area, y = Smoothness, color = Class), alpha=0.75) +
-    geom_point(data = prediction_table, mapping = aes(x = Area, y = Smoothness, color = Class), alpha=0.02, size=5.)+
-    labs(color = "Diagnosis") +
-    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
+  geom_point(data = unscaled_cancer, mapping = aes(x = Area, y = Smoothness, color = Class), alpha = 0.75) +
+  geom_point(data = prediction_table, mapping = aes(x = Area, y = Smoothness, color = Class), alpha = 0.02, size = 5.) +
+  labs(color = "Diagnosis") +
+  scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
 ```
 
-<center>
-```{r 05-workflow-plot-show, echo = FALSE, fig.height = 4, fig.width = 5}
+```{r 05-workflow-plot-show, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatterplot of smoothness versus area where background colour indicates the decision of the classifier"}
 wkflw_plot
 ```
-</center>
-
-
